# meower.py

./: .gitignore  .meower.py.swp  README.md  build.sh  demo-client.py  meowed.py  meower.py  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
src/meower/: __init__.py  meower.py
