[metadata]
name = meower
version = 0.0.9
author = M.D. Walters
author_email = mail@mdwalters.ml
description = Python library for interacting with the Meower API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mdwalters/meower.py
project_urls =
    Bug Tracker = https://github.com/mdwaltrs/meower.py/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.6

[options.packages.find]
where = src
